fixed all problems with background email/sms-send task. report-block partially implemented. some client-side bugs fixed.

--- a/ticonet/ticonet-admin.csproj
+++ b/ticonet/ticonet-admin.csproj
@@ -1194,17 +1194,23 @@
     <Compile Include="Controllers\LinesPlanController.cs" />
     <Compile Include="Controllers\MessageModuleController.cs" />
     <Compile Include="Controllers\Ng\FiltersController.cs" />
+    <Compile Include="Controllers\Ng\MessageReportsController.cs" />
     <Compile Include="Controllers\Ng\MessageSchedulesController.cs" />
     <Compile Include="Controllers\Ng\RecepientCardsController.cs" />
+    <Compile Include="Controllers\Ng\BatchReportsController.cs" />
     <Compile Include="Controllers\Ng\RfiltersController.cs" />
     <Compile Include="Controllers\Ng\RFilterTableController.cs" />
     <Compile Include="Controllers\Ng\TemplatesController.cs" />
+    <Compile Include="Controllers\Ng\ViewModels\BatchReportVM.cs" />
+    <Compile Include="Controllers\Ng\ViewModels\EmailSenderDataProviderVM.cs" />
     <Compile Include="Controllers\Ng\ViewModels\FilterVM.cs" />
     <Compile Include="Controllers\Ng\ViewModels\MessageScheduleVM.cs" />
+    <Compile Include="Controllers\Ng\ViewModels\MessageReportVM.cs" />
     <Compile Include="Controllers\Ng\ViewModels\RecepientcardVM.cs" />
     <Compile Include="Controllers\Ng\ViewModels\RFilterTableVM.cs" />
     <Compile Include="Controllers\Ng\ViewModels\RFilterVM.cs" />
     <Compile Include="Controllers\Ng\ViewModels\SHARED.cs" />
+    <Compile Include="Controllers\Ng\ViewModels\SmsSenderDataProviderVM.cs" />
     <Compile Include="Controllers\Ng\ViewModels\TemplateVM.cs" />
     <Compile Include="Controllers\Ng\ViewModels\WildcardVM.cs" />
     <Compile Include="Controllers\Ng\WildcardsController.cs" />
@@ -1335,9 +1341,11 @@
     <TypeScriptCompile Include="AngularApp\Controllers\FiltersController.ts" />
     <TypeScriptCompile Include="AngularApp\Controllers\MessageModulePageController.ts" />
     <TypeScriptCompile Include="AngularApp\Controllers\NotificationController.ts" />
+    <TypeScriptCompile Include="AngularApp\Controllers\ReportsController.ts" />
     <TypeScriptCompile Include="AngularApp\Controllers\SendMessagesController.ts" />
     <TypeScriptCompile Include="AngularApp\Controllers\SHARED.ts" />
     <TypeScriptCompile Include="AngularApp\Controllers\TemplatesController.ts" />
+    <TypeScriptCompile Include="AngularApp\GridManager.ts" />
     <TypeScriptCompile Include="AngularApp\Libraries\CodeArea.ts" />
     <TypeScriptCompile Include="AngularApp\Libraries\TranslatonUtils.ts" />
     <TypeScriptCompile Include="AngularApp\Libraries\TSNetLike\Collections\ArrayExtensions.ts" />
