messages: draft setting

--- a/ticonet/Web.config
+++ b/ticonet/Web.config
@@ -24,7 +24,7 @@
     <authentication mode="Forms">
       <forms loginUrl="~/account/Login" defaultUrl="~/home/index"></forms>
     </authentication>
-    <customErrors mode="On" defaultRedirect="~/Errors/Error404.html">
+    <customErrors mode="Off" defaultRedirect="~/Errors/Error404.html">
       <error statusCode="404" redirect="~/Errors/Error404.html" />
     </customErrors>
     <httpModules>
